# quant-intraday

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  PATCHLOG_v26_3.txt  README.md  bootstrap.sh  costs.yaml  docker-compose.multi.yml  docker-compose.yaml  docker-compose.yml  events_blackout.yaml  grafana_dashboard.json  portfolio.yaml  pyproject.toml  qi  qi.yaml  requirements.txt
docs/: ALERTS.md  CHANGELOG.md  CLI.md  CONFIG.md  DEPLOYMENT.md  QUICKSTART.md  RUNBOOK.md  SCRIPTS.md  SECURITY.md  WEBUI.md
quant_intraday/: __init__.py  __main__.py  cli.py  config.py  monitor.py  tui.py
scripts/: __init__.py  activate.sh  attr_pnl.py  attr_pnl_v2.py  autopilot.py  autopilot_plus.py  bootstrap.sh  bootstrap_docker.sh  bootstrap_local.sh  calibrate.py  calibrate_lambda.py  calibrate_lambda_buckets.py  calibrate_lambda_nd.py  enter.sh  exec_autotune.py  exec_replay.py  feishu_card.py  fetch_okx_csv.py  fetch_okx_funding_basis.py  healthcheck.py  kelly_scaler.py  make_report.py  metrics_exporter.py  oos_dashboard.py  panic_flatten.py  preflight.py  rebalance.py  reconcile.py  run_backtest.py  run_live.py  run_multi_live.py  supervisor.py  telegram_report.py  weight_adaptor.py  wfo_grid.py
tests/: test_async_io.py  test_autopilot.py  test_backtester.py  test_calendar.py  test_cli_backtest.py  test_cli_import.py  test_config_isolation.py  test_cost_model.py  test_event_guard.py  test_exec_kpi_daemon.py  test_fb_signal.py  test_live_split.py  test_lob_conf.py  test_nd_lambda.py  test_optimizer.py  test_portfolio_cfg.py  test_pov.py  test_queue.py  (+9 more)
(+47 files in other folders)
